# wasmer-go

./: Cargo.toml
wasmer/: BUILD.bazel  cgo.go
wasmer/packaged/include/: BUILD.bazel
wasmer/packaged/lib/: BUILD.bazel  dummy.go
wasmer/packaged/lib/darwin-amd64/: BUILD.bazel
wasmer/packaged/lib/linux-aarch64/: BUILD.bazel
wasmer/packaged/lib/linux-amd64/: BUILD.bazel
