load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wasmer",
    srcs = [
        "cgo.go",
        "config.go",
        "engine.go",
        "error.go",
        "exports.go",
        "exporttype.go",
        "extern.go",
        "externtype.go",
        "function.go",
        "functiontype.go",
        "global.go",
        "globaltype.go",
        "import_object.go",
        "importtype.go",
        "instance.go",
        "limits.go",
        "memory.go",
        "memorytype.go",
        "module.go",
        "name.go",
        "pages.go",
        "store.go",
        "table.go",
        "tabletype.go",
        "target.go",
        "trap.go",
        "value.go",
        "valuetype.go",
        "wasi.go",
        "wasmer.go",
        "wat.go",
    ],
    cgo = True,
    importpath = "github.com/joehattori/wasmer-go/wasmer",
    visibility = ["//visibility:public"],
    cdeps = ["lib"],
    deps = [
        "//wasmer/packaged/include",
        "//wasmer/packaged/lib",
    ],
)

cc_library(
    name = "lib",
    srcs = select({
        "@io_bazel_rules_go//go/platform:darwin": ["//wasmer/packaged/lib/darwin-amd64:libwasmer.dylib"],
        "@io_bazel_rules_go//go/platform:linux": ["//wasmer/packaged/lib/linux-amd64:libwasmer.so"],
        "//conditions:default": [],
    }),
    copts = ["-Iwasmer/wasmer/packaged/include"],
    linkopts = [
        "-lwasmer",
    ] + select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "-Wl,-rpath,wasmer/packaged/lib/darwin-amd64 -Lwasmer/packaged/lib/darwin-amd64",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "-Wl,-rpath,wasmer/packaged/lib/linux-amd64 -Lwasmer/packaged/lib/linux-amd64",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "-Wl,-rpath,wasmer/packaged/lib/linux-aarch64 -Lwasmer/packaged/lib/linux-aarch64",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    hdrs = [
        "//wasmer/packaged/include:wasm.h",
        "//wasmer/packaged/include:wasmer_wasm.h",
    ],
    strip_include_prefix = "packaged/include",
)

go_test(
    name = "wasmer_test",
    srcs = [
        "config_test.go",
        "engine_test.go",
        "exporttype_test.go",
        "externtype_test.go",
        "function_test.go",
        "functiontype_test.go",
        "global_test.go",
        "globaltype_test.go",
        "importtype_test.go",
        "instance_test.go",
        "limits_test.go",
        "memory_test.go",
        "memorytype_test.go",
        "module_test.go",
        "store_test.go",
        "tabletype_test.go",
        "target_test.go",
        "trap_test.go",
        "utils_test.go",
        "valuetype_test.go",
        "wasi_test.go",
        "wat_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":wasmer"],
    deps = ["@com_github_stretchr_testify//assert"],
)
