load("@io_bazel_rules_go//go:def.bzl", "go_library")

exports_files([
    "wasm.h",
    "wasmer_wasm.h",
])

go_library(
    name = "include",
    srcs = [
        "dummy.go",
        "wasm.h",
        "wasmer_wasm.h",
    ],
    importpath = "github.com/joehattori/wasmer-go/wasmer/packaged/include",
    visibility = ["//visibility:public"],
)
