load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = ["dummy.go"],
    importpath = "github.com/joehattori/wasmer-go/wasmer/packaged/lib",
    visibility = ["//visibility:public"],
    deps = [
        "//wasmer/packaged/lib/darwin-amd64",
        "//wasmer/packaged/lib/linux-aarch64",
        "//wasmer/packaged/lib/linux-amd64",
    ],
)
