cc_library(
    name = "lib",
    srcs = select({
        "@io_bazel_rules_go//go/platform:darwin": ["darwin-amd64/libwasmer.dylib"],
        "@io_bazel_rules_go//go/platform:linux": ["linux-amd64/libwasmer.so"],
        "//conditions:default": ["UNSUPPORTED_PLATFORM"],
    }),
    visibility = ["//visibility:public"],
    hdrs = glob(["include/**/*"]),
    strip_include_prefix = "include",
)
